--- a/admin/psql.env
+++ b/admin/psql.env
@@ -1,10 +1,10 @@
-#PGHOME=/home/postgres
+PGHOME=/home/postgres
 
-#LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PGHOME/lib
-#MANPATH=$MANPATH:$PGHOME/share
-#PATH=$PATH:$PGHOME/bin:$PGHOME/admin
-#PGHOST=localhost
-#PGPORT=35432
+LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PGHOME/lib
+MANPATH=$MANPATH:$PGHOME/share
+PATH=$PATH:$PGHOME/bin:$PGHOME/admin
+PGHOST=localhost
+PGPORT=5432
 PGUSER=dev
 PGDATABASE=dev
 PGSEQSP=\|
